@@ -11,7 +11,8 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 scenarios(vlt => 1);
 
 lint(
-    fails => 0,  # But should fail
+    fails => 1,
+    expect_filename => $Self->{golden_filename},
     );
 
 ok(1);
